--- a/css/formatacoes.css
+++ b/css/formatacoes.css
@@ -3,3 +3,41 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+body{
+    height: 100vh;
+    display: flex;
+    background: #e4c515;
+}
+
+#cardboard{
+    width: 640px;
+    height: 640px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.memory-card{
+    width: calc(25% - 10px);
+    height: 33%;
+    margin: 5px;
+    position: relative;
+}
+
+.memory-card:active{
+    transform: scale(0.95);
+}
+
+.memory-card.flip{
+    transform: rotateY(180deg);
+}
+
+
+.front-face, .back-face{
+   background: #675a10;
+   width: 100%;
+   height: 100%;
+   position: absolute;
+   padding: 20px;
+}
